Fixed Events horizontal overflow on mobile

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -26,7 +26,7 @@
 	transform: translate(-50%, -50%);
 
 	@media screen and (max-width: 395px) {
-		font-size: 4rem;
+		font-size: 3.9rem;
 	}
 }
 
